--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "laserrange",
         "masaka",
         "sdvx",
+        "subparsers",
         "testcase",
         "translit",
         "Voltex"
