Added basic radar rendering

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "kshoot-tools",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A collection of tools related to KSH and KSON chart files of K-Shoot Mania",
     "files": [
-        "/dist"
+        "/dist", "/res"
     ],
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
