Added archive reading and convert
Convert is not yet implemented in kshoot.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "laserrange",
         "masaka",
         "sdvx",
+        "sofulan",
         "subparsers",
         "testcase",
         "translit",
