Added exporting to npy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
     "cSpell.words": [
+        "descr",
         "disp",
         "KSH",
         "kshoot",
         "kshootmania",
         "KSON",
         "laserrange",
+        "lerp",
         "masaka",
+        "Numpy",
         "sdvx",
         "sofulan",
         "subparsers",
