--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "argparse": "^2.0.1",
         "audio-decode": "^2.0.2",
         "canvas": "^2.11.0",
+        "dsp.js": "^1.0.1",
         "iconv-lite": "^0.6.3",
         "kshoot": "123jimin/kshoot.js"
     }
